--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,7 @@ jobs:
         Write-Host "Target: $version"
         Invoke-WebRequest -Uri $downloadUrl -OutFile "zen_installer.exe"
         
-        # === 核心修复：写入全局环境变量 GITHUB_ENV ===
-        # 这样后续所有步骤（包括 Upload）都能通过 ${{ env.VERSION }} 读取到它
+        # === 修复：写入全局环境变量，防止最后一步读不到 ===
         echo "VERSION=$version" >> $env:GITHUB_ENV
 
     # 2. 解压 Zen Browser
@@ -59,6 +58,7 @@ jobs:
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\App\ZenBrowser"
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\App\AppInfo"
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\Data"
+        # 保留这个目录以符合 PAF 标准
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\Other\Source"
         
         7z x "zen_installer.exe" -o"TempExtract" -y
@@ -70,7 +70,7 @@ jobs:
             if ($zenExe) { Move-Item "$($zenExe.DirectoryName)\*" "ZenBrowserPortable\App\ZenBrowser" }
         }
 
-    # 3. 配置策略与版本
+    # 3. 配置策略与版本 (准备好所有 PAF 需要的配置)
     - name: Configure App
       shell: powershell
       run: |
@@ -78,7 +78,6 @@ jobs:
         New-Item -ItemType Directory -Force -Path $distDir
         Set-Content -Path "$distDir\policies.json" -Value '{ "policies": { "DisableAppUpdate": true, "ManualAppUpdateOnly": true } }'
 
-        # 直接读取环境变量
         $ver = $env:VERSION
         Set-Content -Path "ZenBrowserPortable\App\AppInfo\version.txt" -Value $ver
 
@@ -92,6 +91,7 @@ jobs:
         if ($content -notcontains "CommercialUse=true") {
             $content = $content -replace "\[License\]", "[License]`r`nCommercialUse=true"
         }
+        # 强制 ANSI，方便下载后在本地打包不出错
         [System.IO.File]::WriteAllText($iniPath, $content, [System.Text.Encoding]::Default)
 
     # 4. 创建 help.html
@@ -108,7 +108,7 @@ jobs:
         set CSC=%windir%\Microsoft.NET\Framework64\v4.0.30319\csc.exe
         "%CSC%" /target:exe /out:ZenBrowserPortable\ZenBrowserPortable.exe /win32icon:appicon.ico /r:System.Windows.Forms.dll Launcher.cs
 
-    # 6. 生成图标
+    # 6. 生成图标 (生成全套 PNG，方便本地打包时不弹窗)
     - name: Generate PAF Icons
       shell: powershell
       run: |
@@ -124,73 +124,23 @@ jobs:
         }
         Copy-Item $icoPath "$destDir\appicon.ico" -Force
 
-    # 7. 解压并准备环境 (搬家到 C:\B)
-    - name: Prepare Build Environment
-      shell: powershell
-      run: |
-        if (-not (Test-Path "InstallerTool.zip")) { Write-Error "InstallerTool.zip missing!"; exit 1 }
-        
-        New-Item -ItemType Directory -Force -Path "C:\B"
-        7z x "InstallerTool.zip" -o"C:\B\Tool" -y
-        Move-Item "ZenBrowserPortable" "C:\B\ZenBrowserPortable"
-        
-        Write-Host "Files moved to C:\B"
-
-    # 8. 执行打包 (路径修正 + CMD调用)
-    - name: Build .paf.exe Package
-      shell: powershell
-      run: |
-        # 直接指定根目录 EXE (根据你的反馈)
-        $pafExe = "C:\B\Tool\PortableApps.comInstaller.exe"
-        
-        if (-not (Test-Path $pafExe)) { 
-            Write-Error "FATAL: InstallerTool EXE not found at $pafExe"
-            ls "C:\B\Tool"
-            exit 1 
-        }
-        
-        $builderPath = $pafExe
-        $sourcePath = "C:\B\ZenBrowserPortable"
-        
-        Write-Host "Builder: $builderPath"
-        
-        # 启动进程 (20分钟超时)
-        $p = Start-Process -FilePath $builderPath -ArgumentList "`"$sourcePath`"" -PassThru
-        try {
-            $p | Wait-Process -Timeout 1200
-            Write-Host "PAF Build finished successfully."
-        } catch {
-            $p | Stop-Process -Force
-            Write-Warning "PAF Build TIMED OUT (20min)! Killing process."
-            Write-Warning "Continuing to ZIP upload..."
-        }
-
-    # 9. 搬回文件并上传
-    - name: Finalize Packages
+    # 7. 仅打包 ZIP
+    - name: Package to ZIP
       shell: powershell
       run: |
         $ver = $env:VERSION
+        $zipName = "ZenBrowserPortable_${ver}.zip"
         
-        # 找回生成的 .paf.exe
-        $pafFile = Get-ChildItem -Path "C:\B" -Filter "*.paf.exe" | Select-Object -First 1
-        if ($pafFile) { 
-            # 搬回工作目录
-            Move-Item $pafFile.FullName ".\ZenBrowserPortable_${ver}.paf.exe"
-            Write-Host "SUCCESS: Installer recovered."
-        }
-        
-        # 打包 ZIP
-        Compress-Archive -Path "C:\B\ZenBrowserPortable" -DestinationPath "ZenBrowserPortable_${ver}.zip"
+        Write-Host "Creating ZIP: $zipName"
+        Compress-Archive -Path "ZenBrowserPortable" -DestinationPath $zipName
 
-    # 10. 上传
+    # 8. 上传
     - name: Upload Release
       uses: softprops/action-gh-release@v1
       with:
-        # 这里引用全局变量，现在肯定有值了
+        # 引用全局变量
         tag_name: ${{ env.VERSION }}
         name: Zen Browser Portable ${{ env.VERSION }}
-        files: |
-          *.zip
-          *.paf.exe
+        files: "*.zip"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
